# ground-vehicles-system

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/ground_vehicles_system/: package.xml  setup.py
src/ground_vehicles_system/domain/common/: constants.py
src/ground_vehicles_system/domain/entities/: base_entity.py  vehicle.py
src/ground_vehicles_system/domain/errors/: coordinates_errors.py  vehicle_errors.py
src/ground_vehicles_system/domain/value_objects/: coordinates.py  heading.py  velocity.py
tests/ground_vehicles_system/: test_copyright.py  test_flake8.py  test_pep257.py
tests/ground_vehicles_system/domain/entities/: test_base_entity.py  test_vehicle.py
tests/ground_vehicles_system/domain/value_objects/: test_coordinates.py  test_heading.py  test_velocity.py
